# graph-rag-chatbot

./: docker-compose.yml
.devcontainer/: devcontainer.json
articles_neo4j_etl/: Dockerfile  entrypoint.sh  pyproject.toml
articles_neo4j_etl/src/articles_neo4j_etl/: article_bulk_csv_write.py
chatbot_api/: Dockerfile  pyproject.toml
chatbot_api/src/: entrypoint.sh  render.yaml
chatbot_api/src/chatbot_api/: main.py
chatbot_api/src/chatbot_api/agents/: rag_agent.py
chatbot_api/src/chatbot_api/chains/: retreiver_chain.py
chatbot_api/src/chatbot_api/models/: rag_query.py
chatbot_frontend/: Dockerfile  pyproject.toml
chatbot_frontend/src/: entrypoint.sh
chatbot_frontend/src/chatbot_frontend/: main.py
