[project]
name = "articles-neo4j-etl"
version = "0.1.0"
description = ""
authors = [
    {name = "nick-occ",email = "nicholaso1980@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "polars (>=1.27.1,<2.0.0)",
    "neo4j (>=5.28.1,<6.0.0)",
    "retry (>=0.9.2,<0.10.0)",
    "openai (>=1.73.0,<2.0.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-openai (>=0.3.12,<0.4.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "langchain-neo4j (>=0.4.0,<0.5.0)",
    "pyarrow (>=19.0.1,<20.0.0)"
]

[tool.poetry]
packages = [{include = "articles_neo4j_etl", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
