[project]
name = "chatbot-api"
version = "0.1.0"
description = ""
authors = [
    {name = "nick-occ",email = "nicholaso1980@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (>=0.3.23,<0.4.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "langchain-openai (>=0.3.14,<0.4.0)",
    "neo4j (>=5.28.1,<6.0.0)",
    "openai (>=1.75.0,<2.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "langchain-neo4j (>=0.4.0,<0.5.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "langchain-core (>=0.3.55,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"

